--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -22,7 +22,7 @@
           <a class="nav-link" routerLink="/incidenciaAdmin" routerLinkActive="active">Incidencias</a>
         </li>
         <li *ngIf="!isAdmin" class="nav-item">
-          <a class="nav-link" routerLink="/incidenciaDetalle" routerLinkActive="active">Incidencias</a>
+          <a class="nav-link" routerLink="/incidenciaCrear" routerLinkActive="active">Incidencias</a>
         </li>
       </ul>
       <div class="nav-item">
