--- a/src/app/components/diagnostic/diagnostic.component.css
+++ b/src/app/components/diagnostic/diagnostic.component.css
@@ -142,7 +142,9 @@ body {
     border-width: 2px;
     border-radius: 10px;
     border-style:solid;
-    box-shadow: 0px 3px 7px 0px rgba(0, 0, 0, 0.5)
+    box-shadow: 0px 3px 7px 0px rgba(0, 0, 0, 0.5);
+    overflow: hidden;
+    overflow-y: scroll;
 }
 
 .btn-analyze{
