--- a/src/app/components/incidence-admin/incidence-admin.component.html
+++ b/src/app/components/incidence-admin/incidence-admin.component.html
@@ -11,15 +11,15 @@
         <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
             <!-- Position Column -->
-            <ng-container matColumnDef="idIncidence">
+            <ng-container matColumnDef="id">
                 <th mat-header-cell *matHeaderCellDef> ID </th>
-                <td mat-cell *matCellDef="let element"> {{element.idIncidence}} </td>
+                <td mat-cell *matCellDef="let element"> {{element.id}}</td>
             </ng-container>
         
             <!-- Name Column -->
-            <ng-container matColumnDef="dniDoctor">
+            <ng-container matColumnDef="docMedic">
                 <th mat-header-cell *matHeaderCellDef> Doc. Médico </th>
-                <td mat-cell *matCellDef="let element"> {{element.dniDoctor}} </td>
+                <td mat-cell *matCellDef="let element"> {{element.docMedic}} </td>
             </ng-container>
         
             <!-- Weight Column -->
@@ -28,16 +28,16 @@
                 <td mat-cell *matCellDef="let element"> {{element.type}} </td>
             </ng-container>
 
-            <ng-container matColumnDef="state">
+            <ng-container matColumnDef="status">
                 <th mat-header-cell *matHeaderCellDef> Estado </th>
-                <td mat-cell *matCellDef="let element"> {{element.state}} </td>
+                <td mat-cell *matCellDef="let element"> {{element.status}} </td>
             </ng-container>
         
             <!-- Symbol Column -->
             <ng-container matColumnDef="details">
                 <th mat-header-cell *matHeaderCellDef> Detalles </th>
                 <td mat-cell *matCellDef="let element"> 
-                    <button type="button" class="btn-view" (click)="onView()">Ver</button>
+                    <button type="button" class="btn-view" (click)="onView(element.id)">Ver</button>
                 </td>
             </ng-container>
         
