--- a/src/app/components/incidence-details/incidence-details.component.html
+++ b/src/app/components/incidence-details/incidence-details.component.html
@@ -4,48 +4,44 @@
         <div class="elements-row">
             <div class="element-container">
                 <label>Código Médico</label>
-                <select class="combo">
-                    <option value="Select">Buscar Elemento</option>
-                </select>
+                <input disabled [value]="docMedic">
             </div>
             <div class="element-container">
                 <label>Centro de Salud</label>
-                <input disabled>
+                <input disabled [value]="centroSaludId">
             </div>
             <div class="element-container">
                 <label>Estado</label>
-                <select class="combo">
-                    <option value="Select">Buscar elemento</option>
-                </select>
+                <input disabled [value]="status">
             </div>
         </div>
         <div class="elements-row">
             <div class="asunto-container">
                 <label>Asunto: </label>
-                <input class="asunto" disabled>
+                <input class="asunto" disabled [value]="topic">
             </div>
             <div class="telefono-container">
                 <label>Teléfono</label>
-                <input class="telefono" disabled>
+                <input class="telefono" disabled [value]="phone">
             </div>
         </div>
         <div>
             <label>Descripción de Incidencia</label>
             <div class="container-desc-incidence">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p aria-disabled="true">{{description}}</p>
             </div>
         </div>
         <div class="elements-row-center">
             <div class="element-container">
                 <label>Tipo de Registro</label>
-                <select class="combo">
-                    <option value="Select">Buscar Elemento</option>
+                <select class="combo" disabled>
+                    <option value="Select">{{type}}</option>
                 </select>
             </div>
             <div class="element-container">
                 <label>Prioridad</label>
-                <select class="combo">
-                    <option value="Select">Buscar Elemento</option>
+                <select class="combo" disabled>
+                    <option value="Select">{{priority}}</option>
                 </select>
             </div>
         </div>
@@ -54,20 +50,20 @@
                 <label>
                     Detalle de Solución
                 </label>
-                <textarea id="w3review" name="w3review" rows="4" cols="100"></textarea>
+                <textarea [(ngModel)]="solution" id="w3review" name="w3review" rows="4" cols="100"></textarea>
             </div>
             <div class="column-2">
                 <label>
                     Fecha de Solución
                 </label>
                 <div class="element-container-section-samall">
-                    <input type="date">
-                    <input type="time">
+                    <input type="date" [(ngModel)]="inputDate">
+                    <input type="time" [(ngModel)]="inputHour">
                 </div>
             </div>
         </div>
     </div>
     <footer>
-        <button class="btn-update">Actualizar</button>
+        <button class="btn-update" (click)="update()">Actualizar</button>
     </footer>
 </body>
