--- a/src/app/components/analyze/analyze.component.css
+++ b/src/app/components/analyze/analyze.component.css
@@ -22,7 +22,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    height: 230px;
+    height: 180px;
     box-shadow: 0px 3px 7px 0px rgba(0, 0, 0, 0.5)
 }
 
@@ -66,6 +66,10 @@ body {
 
 .input-block-medium{
     width: 50%;
+}
+
+.item--textbox{
+    width: 150px;
 }
 
 .second-row{
