--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -18,9 +18,9 @@
         <li *ngIf="isAdmin" class="nav-item">
           <a class="nav-link" routerLink="/incidenciaAdmin" routerLinkActive="active">Incidencias</a>
         </li>
-        <li *ngIf="!isAdmin" class="nav-item">
+        <!-- <li *ngIf="!isAdmin" class="nav-item">
           <a class="nav-link" routerLink="/incidenciaCrear" routerLinkActive="active">Incidencias</a>
-        </li>
+        </li> -->
       </ul>
       <div class="nav-item">
         <h3 style="color: white;">¡Bienvenido a Predimed, &nbsp; {{ name }}!</h3>
