--- a/src/app/components/analyze/analyze.component.html
+++ b/src/app/components/analyze/analyze.component.html
@@ -81,7 +81,7 @@
       </button>
     </section>
     <section class="btn-column2">
-      <button type="submit" class="btn-no-ref">No Referir</button>
+      <button type="submit" class="btn-no-ref" (click) ="onNoReferenceDialog()">No Referir</button>
       <button type="button" class="btn-ref" (click)="onReference()">
         Referir
       </button>
