--- a/src/app/components/diagnostic/diagnostic.component.css
+++ b/src/app/components/diagnostic/diagnostic.component.css
@@ -51,7 +51,7 @@ body {
     border-width: 2px;
     border-radius: 10px;
     border-style:solid;
-    background-color: #BDF8F5;
+    background-color: #ECF4FC;
     margin: 30px 7%;
     padding: 15px 25px;
     display: flex;
@@ -146,8 +146,6 @@ body {
     border-radius: 10px;
     border-style:solid;
     box-shadow: 0px 3px 7px 0px rgba(0, 0, 0, 0.5);
-    overflow: hidden;
-    overflow-y: scroll;
 }
 
 .btn-analyze{
